
2024-02-21

New port! Thanks to Raito Bezarius, Liminix now runs on the Zyxel NWA50AX,
an MT7621 (MIPS EL) dual radio WiFi AP.

2024-04-29

The setup for using `levitate` has changed: now it accepts an entire
config fragment, not just a list of services.  Hopefully this makes it
a bit more useful :-)

  defaultProfile.packages = with pkgs; [
    ... 
    (levitate.override {
      config  = {
        services = {
          inherit (config.services) dhcpc sshd watchdog;
        };
        defaultProfile.packages = [ mtdutils ];
        users.root.openssh.authorizedKeys.keys = secrets.root.keys;
      };
    })
  ];

2024-07-16

* structured parameters are available for the pppoe service

* The "wan" configuration in modules/profiles/gateway.nix has changed:
instead of passing options that are used to create a pppoe interface,
callers should create a (pppoe or other) interface and pass that as
the value of profile.gateway.wan. For the pppoe case this is now only
very slightly more verbose, and it allows using the gateway profile
with other kinds of upstream.

2024-8-16

As part of implementing log shipping, the default directory for system
logs has beenchanged from /run/uncaught-logs to /run/log

2024-10-09

liminix-rebuild is being deprecated. From hereon in, the preferred way
to do an incremental update on an installed device with a writable
filesystem is to build the systemConfiguration output

    nix-build  -I liminix-config=hosts/myhost.nix --argstr deviceName turris-omnia -A outputs.systemConfiguration 

and then run the generated `install.sh` script

    result/install.sh root@192.168.8.1

2024-12-16

Config options changed: if you had set config.hardware.dts.includes
(maybe in an out-of-tree device port) to specify the search paths
in which dtc finds include files, you will need to change this to 
hardware.dts.includePaths.

The "new" hardware.dts.includes option is now for dtsi files which
should be merged into the device tree.
