@@ -172,8 +172,6 @@
         ../../modules/arch/arm.nix
         ../../modules/outputs/tftpboot.nix
         ../../modules/outputs/mbrimage.nix
-        ../../modules/outputs/extlinux.nix
-        ../../modules/outputs/system-configuration.nix
       ];
 
       config = {
@@ -337,7 +335,7 @@
             targets = ["ath9k" "ath10k_pci"];
           };
         in {
-          defaultOutput = "systemConfiguration";
+          defaultOutput = "updater";
           loadAddress = lim.parseInt "0x00800000"; # "0x00008000";
           entryPoint = lim.parseInt "0x00800000"; # "0x00008000";
           rootDevice = "/dev/mmcblk0p1";
